--- a/package.json
+++ b/package.json
@@ -6,20 +6,24 @@
   "scripts": {
     "test": "jest",
     "build": "webpack --mode production",
-    "start": "webpack-dev-server --mode development --open"
+    "start": "webpack-dev-server --mode development --open",
+    "storybook": "start-storybook"
   },
   "author": "Andrew Hill",
   "license": "ISC",
   "dependencies": {
+    "d3": "^5.16.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
+    "@storybook/react": "^5.3.18",
     "babel-loader": "^8.1.0",
     "compression-webpack-plugin": "^3.1.0",
     "css-loader": "^3.5.2",
