--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "@storybook/react": "^5.3.18",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "compression-webpack-plugin": "^3.1.0",
     "css-loader": "^3.5.2",
     "eslint": "^6.8.0",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^3.0.0",
     "html-webpack-plugin": "^4.2.0",
     "jest": "^26.0.1",
     "style-loader": "^1.1.4",
@@ -41,12 +44,5 @@
       "@babel/preset-env",
       "@babel/preset-react"
     ]
-  },
-  "plugins": [
-    "react"
-  ],
-  "extends": [
-    "eslint:recommended",
-    "plugin:react/recommended"
-  ]
+  }
 }
