--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "build": "webpack --mode production",
     "start": "webpack-dev-server --mode development --open",
-    "storybook": "start-storybook"
+    "storybook": "start-storybook -s ./public"
   },
   "author": "Andrew Hill",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
+    "react-simple-maps": "^2.0.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
