--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "react-redux": "^7.2.0",
     "react-simple-maps": "^2.0.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "topojson-client": "^3.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "@storybook/react": "^5.3.18",
+    "@types/jest": "^25.2.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "compression-webpack-plugin": "^3.1.0",
@@ -33,8 +35,10 @@
     "eslint-loader": "^4.0.2",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
+    "fetch-mock": "^9.5.1",
     "html-webpack-plugin": "^4.2.0",
     "jest": "^26.0.1",
+    "redux-mock-store": "^1.5.4",
     "style-loader": "^1.1.4",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
