--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
   "author": "Andrew Hill",
   "license": "ISC",
   "dependencies": {
-    "d3": "^5.16.0",
+    "leaflet": "^1.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-leaflet": "^2.7.0",
     "react-redux": "^7.2.0",
-    "react-simple-maps": "^2.0.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "topojson-client": "^3.1.0"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
