--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-leaflet": "^2.7.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
@@ -26,6 +27,7 @@
     "@babel/preset-react": "^7.9.4",
     "@storybook/react": "^5.3.18",
     "@types/jest": "^25.2.1",
+    "@types/styled-components": "^5.1.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "compression-webpack-plugin": "^3.1.0",
