--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Andrew Hill",
   "license": "ISC",
   "dependencies": {
+    "jest-each": "^26.0.1",
     "leaflet": "^1.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
